# jera

./: .gitignore  QA_REPORT.md  README.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  deps.py  main.py  schemas.py
apps/api/app/routers/: documents.py  health.py  ingest.py  jobs.py  query.py
apps/api/tests/: test_api_e2e.py
python/jera/: pyproject.toml
python/jera/src/jera/: __init__.py
python/jera/src/jera/adapters/: __init__.py
python/jera/src/jera/adapters/chunking/: __init__.py  heading_aware.py  hierarchical.py  proposition.py  sections.py  semantic.py  sentences.py  tokenizer.py
python/jera/src/jera/adapters/context/: __init__.py  compressor.py  curator.py  reorderer.py
python/jera/src/jera/adapters/contextual/: __init__.py  claude_situate_llm.py  heuristic_contextualizer.py  llm_contextualizer.py
python/jera/src/jera/adapters/embedding/: __init__.py  fastembed_embedding.py  hash_embedding.py  hash_multivector.py  instruction.py  late_chunking.py  openai_embedding.py  truncated_dim.py  visual_multivector.py
python/jera/src/jera/adapters/evaluation/: overlap_evaluator.py
python/jera/src/jera/adapters/generator/: __init__.py  claude_generator.py  extractive_generator.py  tool_augmented_generator.py
python/jera/src/jera/config/: __init__.py  pricing.py  registry.py  settings.py
python/jera/src/jera/domain/: __init__.py  answer.py  chunk.py  document.py  ids.py  jobs.py  retrieval.py  vectors.py
python/jera/src/jera/evaluation/: __init__.py  ablation.py  computation.py  dataset_builder.py  generation_runner.py  gold_builder.py  matrix.py  parser_bench.py  profiling.py  report.py  runner.py
python/jera/src/jera/evaluation_contracts/: __init__.py  dataset.py  generation_metrics.py  metrics.py  parsing_metrics.py  ragchecker_metrics.py
python/jera/src/jera/pipeline/: __init__.py  adaptive.py  corrective.py  decompositional.py  ingest.py  iterative.py  query.py
python/jera/src/jera/ports/: __init__.py  chunker.py  context_processor.py  contextualizer.py  embedding.py  entity_extractor.py  followup_controller.py  generator.py  graph_retriever.py  metadata_store.py  multi_vector_embedding.py  multi_vector_store.py  parser.py  query_decomposer.py  query_router.py  query_transformer.py  reranker.py  retrieval_evaluator.py  sparse.py  vector_store.py
python/jera/src/jera/rag/: __init__.py
python/jera/src/jera/tooluse/: README.md  __init__.py  llm.py  runtime.py  tools.py
python/jera/tests/: conftest.py
python/jera/tests/fixtures/hwpx/: make_fixture.py  sample.gold.json  sample.hwpx
python/jera/tests/gates/: test_package_boundary.py
python/jera/tests/integration/: test_ingest_query.py
python/jera/tests/unit/: test_ablation.py  test_adaptive_rag.py  test_camelot_parser.py  test_chunking.py  test_chunking_advanced.py  test_cloud_anthropic_adapters.py  test_cloud_vendor_adapters.py  test_computation_eval.py  test_context_processing.py  test_contextual_retrieval.py  test_contextualizer.py  test_corrective_rag.py  test_docling_parser.py  test_eval_runner.py  test_fusion_golden.py  test_generation_metrics.py  test_generation_runner.py  test_gold_builder.py  test_hippo_retrieval.py  test_hwpx_parser.py  test_instruction_embedding.py  test_iterative_retrieval.py  test_korean_dataset.py  test_late_chunking.py  test_listwise_reranker.py  test_matrix.py  test_maxsim_retrieval.py  test_metadata_lifecycle.py  test_metrics.py  test_mmr_reranker.py  test_multi_query_retrieval.py  test_ocr_engines.py  test_opendataloader_parser.py  test_parsers.py  test_parsing_metrics.py  test_parsing_routing.py  test_pricing.py  test_profiling.py  test_proposition_chunking.py  test_providers.py  (+12 more)
scripts/: ablation.py  (+8 more)
(+92 files in other folders)
