# uv WORKSPACE root (the single packaging model). Virtual root: no [project],
# only coordinates members. `uv sync` installs every member editable into one venv.
[tool.uv.workspace]
members = ["python/jera", "apps/api"]

[tool.uv.sources]
jera = { workspace = true }
jera-api = { workspace = true }

# Dev tooling shared across the workspace (PEP 735 dependency group).
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["python/jera/src", "apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = ["python/jera/src", "apps/api"]
explicit_package_bases = true
namespace_packages = true
# Optional/heavy extras are not installed in CI; ignore their missing stubs.
[[tool.mypy.overrides]]
module = [
    "fastembed.*",
    "qdrant_client.*",
    "fitz.*",
    "pymupdf.*",
    "docling.*",
    "cohere.*",
    "openai.*",
    "anthropic.*",
    "psycopg.*",
    "camelot.*",
    "pandas.*",
    "opendataloader_pdf.*",
    "hwp5.*",
    "pytesseract.*",
    "PIL.*",
    "rapidocr_onnxruntime.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["python/jera/tests", "apps/api/tests"]
markers = [
    "requires_extra: test needs an optional extra (local/qdrant/postgres/cloud/docling) and is skipped in default CI",
]
addopts = "-q"
