[project]
name = "jera"
version = "0.1.0"
description = "Jera — hexagonal, offline-first RAG domain package"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
local = ["fastembed>=0.3"]
qdrant = ["qdrant-client>=1.10"]
postgres = ["psycopg[binary]>=3.2"]
docling = ["docling>=2.0"]
cloud = ["openai>=1.40", "anthropic>=0.34", "cohere>=5.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jera"]
